force-app/main/default/objects/Healthcare_Facility_Locations_data__c/Healthcare_Facility_Locations_data__c.object-meta.xml
<CustomObject>
    <label>Healthcare_Facility_Locations data</label>
    <nameField>
        <label>Healthcare_Facility_Locations data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Healthcare_Facility_Locations data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>