force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS__c</fullName>
    <label>ADDRESS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>