force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/BUSINESS_NAME__c.field-meta.xml
<CustomField>
    <fullName>BUSINESS_NAME__c</fullName>
    <label>BUSINESS_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>