force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/CAPACITY__c.field-meta.xml
<CustomField>
    <fullName>CAPACITY__c</fullName>
    <label>CAPACITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>