force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/CCHLO_Code__c.field-meta.xml
<CustomField>
    <fullName>CCHLO_Code__c</fullName>
    <label>CCHLO_Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>