force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/CCLHO_Name__c.field-meta.xml
<CustomField>
    <fullName>CCLHO_Name__c</fullName>
    <label>CCLHO_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>