force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/CITY__c.field-meta.xml
<CustomField>
    <fullName>CITY__c</fullName>
    <label>CITY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>