force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/CONTACT_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_EMAIL__c</fullName>
    <label>CONTACT_EMAIL</label>
    <type>Email</type>
</CustomField>