force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/CONTACT_FAX__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_FAX__c</fullName>
    <label>CONTACT_FAX</label>
    <type>Phone</type>
</CustomField>