force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/CONTACT_PHONE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_PHONE_NUMBER__c</fullName>
    <label>CONTACT_PHONE_NUMBER</label>
    <type>Phone</type>
</CustomField>