force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/COUNTY_CODE__c.field-meta.xml
<CustomField>
    <fullName>COUNTY_CODE__c</fullName>
    <label>COUNTY_CODE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>