force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/COUNTY_NAME__c.field-meta.xml
<CustomField>
    <fullName>COUNTY_NAME__c</fullName>
    <label>COUNTY_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>