force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/DISTRICT_NAME__c.field-meta.xml
<CustomField>
    <fullName>DISTRICT_NAME__c</fullName>
    <label>DISTRICT_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>