force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/DISTRICT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>DISTRICT_NUMBER__c</fullName>
    <label>DISTRICT_NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>