force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/ENTITY_TYPE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>ENTITY_TYPE_DESCRIPTION__c</fullName>
    <label>ENTITY_TYPE_DESCRIPTION</label>
    <length>100</length>
    <type>Text</type>
</CustomField>