force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/FAC_FDR__c.field-meta.xml
<CustomField>
    <fullName>FAC_FDR__c</fullName>
    <label>FAC_FDR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>