force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/FAC_TYPE_CODE__c.field-meta.xml
<CustomField>
    <fullName>FAC_TYPE_CODE__c</fullName>
    <label>FAC_TYPE_CODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>