force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/FACADMIN__c.field-meta.xml
<CustomField>
    <fullName>FACADMIN__c</fullName>
    <label>FACADMIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>