force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/FACID__c.field-meta.xml
<CustomField>
    <fullName>FACID__c</fullName>
    <label>FACID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>