force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/FACNAME__c.field-meta.xml
<CustomField>
    <fullName>FACNAME__c</fullName>
    <label>FACNAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>