force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/FIPS_Couunty_Code__c.field-meta.xml
<CustomField>
    <fullName>FIPS_Couunty_Code__c</fullName>
    <label>FIPS_Couunty_Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>