force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/INITIAL_LICENSE_DATE__c.field-meta.xml
<CustomField>
    <fullName>INITIAL_LICENSE_DATE__c</fullName>
    <label>INITIAL_LICENSE_DATE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>