force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/ISFACMAIN__c.field-meta.xml
<CustomField>
    <fullName>ISFACMAIN__c</fullName>
    <label>ISFACMAIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>