force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/LATITUDE__c.field-meta.xml
<CustomField>
    <fullName>LATITUDE__c</fullName>
    <label>LATITUDE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>