force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/LICENSE_EFFECTIVE_DATE__c.field-meta.xml
<CustomField>
    <fullName>LICENSE_EFFECTIVE_DATE__c</fullName>
    <label>LICENSE_EFFECTIVE_DATE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>