force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/LICENSE_EXPIRATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>LICENSE_EXPIRATION_DATE__c</fullName>
    <label>LICENSE_EXPIRATION_DATE</label>
    <type>DateTime</type>
</CustomField>