force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/LOCATION__c.field-meta.xml
<CustomField>
    <fullName>LOCATION__c</fullName>
    <label>LOCATION</label>
    <length>100</length>
    <type>Text</type>
</CustomField>