force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/LONGITUDE__c.field-meta.xml
<CustomField>
    <fullName>LONGITUDE__c</fullName>
    <label>LONGITUDE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>