force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/LTC__c.field-meta.xml
<CustomField>
    <fullName>LTC__c</fullName>
    <label>LTC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>