force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/OSHPD_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>OSHPD_NUMBER__c</fullName>
    <label>OSHPD_NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>