force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/StreetName__c.field-meta.xml
<CustomField>
    <fullName>StreetName__c</fullName>
    <label>StreetName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>