force-app/main/default/objects/Healthcare_Facility_Locations_data__c/fields/ZIP__c.field-meta.xml
<CustomField>
    <fullName>ZIP__c</fullName>
    <label>ZIP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>